Protection System Audit